# FreeEEG32-alpha1.5

./: README.md  components FreeEEG32 plus alpha1.5.csv
AC6/STM32F765ZI_alpha1.5/: STM32F765ZI.cfg  STM32F765ZITx_FLASH.ld  STM32F765ZI_alpha1.5.ioc  STM32F765ZI_alpha1.5.xml
AC6/STM32F765ZI_alpha1.5/Inc/: ad7779.h  main.h  platform_drivers.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
AC6/STM32F765ZI_alpha1.5/Src/: ad7779.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
AC6/STM32H743ZI_alpha1.5/: STM32H743ZITx_FLASH.ld  STM32H743ZITx_FLASH2.ld  STM32H743ZI_alpha1.5.cfg  STM32H743ZI_alpha1.5.ioc  STM32H743ZI_alpha1.5.xml
AC6/STM32H743ZI_alpha1.5/Debug/: STM32H743ZI_alpha1.5.elf  STM32H743ZI_alpha1.5.hex  STM32H743ZI_alpha1.5.sh  makefile  objects.list  output.map  sources.mk
AC6/STM32H743ZI_alpha1.5/Debug/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.d  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_exti.d  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_gpio.d  stm32h7xx_hal_hsem.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_i2c_ex.d  stm32h7xx_hal_mdma.d  stm32h7xx_hal_pcd.d  stm32h7xx_hal_pcd_ex.d  stm32h7xx_hal_pwr.d  stm32h7xx_hal_pwr_ex.d  stm32h7xx_hal_rcc.d  stm32h7xx_hal_rcc_ex.d  stm32h7xx_hal_sai.d  stm32h7xx_hal_sai_ex.d  stm32h7xx_hal_spi.d  stm32h7xx_hal_spi_ex.d  stm32h7xx_hal_tim.d  stm32h7xx_hal_tim_ex.d  stm32h7xx_hal_uart.d  stm32h7xx_hal_uart_ex.d  stm32h7xx_ll_usb.d  subdir.mk
AC6/STM32H743ZI_alpha1.5/Debug/Src/: ad7779.d  main.d  platform_drivers.d  stm32h7xx_hal_msp.d  stm32h7xx_it.d  subdir.mk  system_stm32h7xx.d  usb_device.d  usbd_cdc_if.d  usbd_conf.d  usbd_desc.d
AC6/STM32H743ZI_alpha1.5/Inc/: ad7779.h  main.h  platform_drivers.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  usbd_conf.h
AC6/STM32H743ZI_alpha1.5/Src/: main.c  platform_drivers.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
AC6/STM32H743ZI_alpha1.5_filter/: STM32H743ZITx_FLASH.ld  STM32H743ZI_alpha1.5.cfg  STM32H743ZI_alpha1.5_filter.ioc  STM32H743ZI_alpha1.5_filter.xml
KiCAD/: ACCEL&GYRO.sch  ADC1.sch  AVDD.sch  CRYSTAL.sch  FreeEEG32-alpha1.5-cache.lib  FreeEEG32-alpha1.5.kicad_pcb  FreeEEG32-alpha1.5.net  FreeEEG32-alpha1.5.pro  FreeEEG32-alpha1.5.sch  ISO1.sch  ISO_SPI.sch  ISO_UART.sch  POWER.sch  USB_DATA.sch  USB_POWER.sch  sym-lib-table
OpenVIBE/: Dockerfile  openvibe-acquisition-server.sh  openvibe-designer-vpn.sh  openvibe-designer.sh  openvibe-ubuntu-xfce-vnc 2.2.0 alpha1.5.tar.xz  puredata-openvibe.tar.xz  puredata-ubuntu-xfce-vnc 0.48.1-3.tar.xz
OpenVIBE/arm64/: docker-headless-vnc-container.tar.xz  openvibe-ubuntu-xfce-vnc 2.2.0 alpha1.5.tar.xz
OpenVIBE/arm64/docker-headless-vnc-container/: Dockerfile  Dockerfile_build.sh  Dockerfile_push.sh
OpenVIBE/arm64/docker-headless-vnc-container/src/common/install/: firefox_arm64.sh
OpenVIBE/arm64/docker-headless-vnc-container/src/ubuntu/install/: tigervnc_arm64.sh
OpenVIBE/arm64/openvibe-ubuntu-xfce-vnc 2.2.0 alpha1.5/: Dockerfile  Dockerfile_build.sh  Dockerfile_push.sh
OpenVIBE/arm64/openvibe-ubuntu-xfce-vnc 2.2.0 alpha1.5/openvibe-2.2.0-src/: build.sh
OpenVIBE/arm64/openvibe-ubuntu-xfce-vnc 2.2.0 alpha1.5/openvibe-2.2.0-src/extras/: CMakeLists.txt
OpenVIBE/arm64/openvibe-ubuntu-xfce-vnc 2.2.0 alpha1.5/openvibe-2.2.0-src/extras/applications/platform/tracker/src/: ParallelExecutor.cpp
OpenVIBE/arm64/openvibe-ubuntu-xfce-vnc 2.2.0 alpha1.5/openvibe-2.2.0-src/sdk/: CMakeLists.txt
OpenVIBE/arm64/openvibe-ubuntu-xfce-vnc 2.2.0 alpha1.5/openvibe-2.2.0-src_FreeEEG32-alpha1.5/extras/contrib/common/: contribAcquisitionServer.cmake  contribAcquisitionServer.inl
OpenVIBE/gdf/: record-[2019.09.13-23.31.59].edf
OpenVIBE/openvibe-1.3.0-src/contrib/common/: contribAcquisitionServer.cmake  contribAcquisitionServer.inl
OpenVIBE/openvibe-1.3.0-src/contrib/plugins/server-drivers/freeeeg32a1_5/share/: interface-FreeEEG32a1_5.ui
OpenVIBE/openvibe-1.3.0-src/contrib/plugins/server-drivers/freeeeg32a1_5/src/: ovasCConfigurationFreeEEG32a1_5.cpp  ovasCConfigurationFreeEEG32a1_5.h  ovasCDriverFreeEEG32a1_5.cpp  ovasCDriverFreeEEG32a1_5.h
OpenVIBE/openvibe-2.2.0-src/extras/contrib/common/: contribAcquisitionServer.cmake  contribAcquisitionServer.inl
OpenVIBE/scenarios/: UseCase-1-EEG-signal-analysis_32ch.mxs  test_64.mxs  test_64_2.mxs  test_64_2_play.mxs
Processing/sketchbook/QRCodeTest_osc_emotions_android/: AndroidManifest.xml  QRCodeTest_osc_emotions_android.pde  README.md
PsychoPy/: UseCase-1-EEG-signal-analysis_play.mxs  UseCase-1-EEG-signal-analysis_write.mxs  gaped.csv  gaped_3.psyexp  gaped_3.py  valence_arousal_5_6_amplitude_8-12Hz_12-28Hz_features_write_32.xml
PsychoPy/GAPED/: A.txt  A_with SD.txt  H.txt  H_with SD.txt  N.txt  N_with SD.txt  P.txt  P_with SD.txt  Sn.txt  Sn_with SD.txt  Sp.txt  Sp_with SD.txt
iir-designer-cmsis-dsp-master/: design_iir_bandpass_cmsis_butter.m  design_iir_bandstop_cmsis_butter.m  design_iir_lowpass_cmsis_butter.m  iir_designer_usage_examples_.txt  octave-workspace
multiarch/: docker-headless-vnc-container.tar.xz  openvibe-ubuntu-xfce-vnc.tar.xz  puredata-ubuntu-xfce-vnc.tar.xz  swap1G.sh  swap_auto.sh
theta&gamma2octave/: biosemi32setup.txt  ov_osc_theta-alpha_beta_gamma_octave_F3_F4.pd  theta&gamma2octave.mxs  theta&gamma2octave_osc._online.mxs  theta&gamma2octave_osc_online.mxs  theta&gamma2octave_osc_online_F3_F4.mxs  theta&gamma2octave_osc_online_Fp1_Fp2_F3_F4_P3_P4_O1_O2.mxs  theta&gamma2octave_osc_online_Fp1_Fp2_F3_F4_P3_P4_O1_O2_osc1.mxs  theta&gamma2octave_osc_online_Fp1_Fp2_F3_F4_P3_P4_O1_O2_replay.mxs  theta&gamma2octave_osc_online_Fp1_Fp2_F3_F4_P3_P4_O1_O2_silenced.mxs  theta_gamma2octave_frequencyExample_osc.pde
theta&gamma2octave/Pd/: ov_osc_theta-alpha_beta_gamma_octave.pd  ov_osc_theta-alpha_beta_gamma_octave_Fp1_Fp2_F3_F4_P3_P4_O1_O2.pd  ov_osc_theta-gamma_octave.pd  theta&gamma_Fp1_Fp2_F3_F4_P3_P4_O1_O2_bass.pd
theta&gamma2octave/theta_gamma2octave_frequencyExample_telnet/: theta_gamma2octave_frequencyExample_telnet.pde
(+18 files in other folders)
